--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "boostrap": "^2.0.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/jquery": "^3.5.16",
     "react-router-dom": "^6.14.1"
   }
 }
