--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PORT=http://45.77.215.103/api
-#REACT_APP_PORT=http://localhost:3006/api
+#REACT_APP_PORT=http://45.77.215.103/api
+REACT_APP_PORT=http://localhost:3005/api
