--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
